Make project Java 8 compatible